; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_runtime_utils.c_mp_call_function_1_protected.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_runtime_utils.c_mp_call_function_1_protected.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@mp_plat_print = common dso_local global i32 0, align 4
@MP_OBJ_NULL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_call_function_1_protected(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_3__, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = call i64 @nlr_push(%struct.TYPE_3__* %6)
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @mp_call_function_1(i32 %11, i32 %12)
  store i32 %13, i32* %7, align 4
  %14 = call i32 (...) @nlr_pop()
  %15 = load i32, i32* %7, align 4
  store i32 %15, i32* %3, align 4
  br label %22

16:                                               ; preds = %2
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @MP_OBJ_FROM_PTR(i32 %18)
  %20 = call i32 @mp_obj_print_exception(i32* @mp_plat_print, i32 %19)
  %21 = load i32, i32* @MP_OBJ_NULL, align 4
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %16, %10
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i64 @nlr_push(%struct.TYPE_3__*) #1

declare dso_local i32 @mp_call_function_1(i32, i32) #1

declare dso_local i32 @nlr_pop(...) #1

declare dso_local i32 @mp_obj_print_exception(i32*, i32) #1

declare dso_local i32 @MP_OBJ_FROM_PTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
